<?xml version="1.0"?>
<package>
  <name>bert2_description</name>
  <version>0.1.0</version>
  <description>
    Description of the Bristol Elumotion Robot Torso 2 (BERT2) robot
    This package contains the URDF describing BERT
  </description>

  <maintainer email="abroun@dawnrobotics.co.uk">Alan Broun</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>

</package>
